[gd_scene load_steps=6 format=3 uid="uid://turret3d00000001"]

[ext_resource type="Script" path="res://src/entities/turret/Turret3D.gd" id="1_script"]

[sub_resource type="BoxMesh" id="BoxMesh_base"]
size = Vector3(0.6, 0.3, 0.6)

[sub_resource type="CylinderMesh" id="CylinderMesh_head"]
top_radius = 0.25
bottom_radius = 0.3
height = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_barrel"]
size = Vector3(0.1, 0.1, 0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_range"]
top_radius = 6.0
bottom_radius = 6.0
height = 0.02
material = null

[node name="Turret3D" type="Node3D"]
script = ExtResource("1_script")

[node name="ModelContainer" type="Node3D" parent="."]

[node name="Base" type="MeshInstance3D" parent="ModelContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
mesh = SubResource("BoxMesh_base")

[node name="TurretHead" type="Node3D" parent="ModelContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)

[node name="HeadMesh" type="MeshInstance3D" parent="ModelContainer/TurretHead"]
mesh = SubResource("CylinderMesh_head")

[node name="Barrel" type="Node3D" parent="ModelContainer/TurretHead"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="BarrelMesh" type="MeshInstance3D" parent="ModelContainer/TurretHead/Barrel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3)
mesh = SubResource("BoxMesh_barrel")

[node name="MuzzlePoint" type="Node3D" parent="ModelContainer/TurretHead/Barrel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.55)

[node name="HealthBar3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0)

[node name="HackIndicator" type="Node3D" parent="."]
visible = false
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="RangeIndicator" type="MeshInstance3D" parent="."]
visible = false
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh = SubResource("CylinderMesh_range")
skeleton = NodePath("")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
